Login UI complete

--- a/Medicare/Medicare.csproj
+++ b/Medicare/Medicare.csproj
@@ -210,6 +210,80 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\bin\Antlr3.Runtime.dll" />
+    <Content Include="Areas\bin\Antlr3.Runtime.pdb" />
+    <Content Include="Areas\bin\EntityFramework.dll" />
+    <Content Include="Areas\bin\EntityFramework.SqlServer.dll" />
+    <Content Include="Areas\bin\EntityFramework.SqlServer.xml" />
+    <Content Include="Areas\bin\EntityFramework.xml" />
+    <Content Include="Areas\bin\Medicare.dll" />
+    <Content Include="Areas\bin\Medicare.pdb" />
+    <Content Include="Areas\bin\Microsoft.AI.Agent.Intercept.dll" />
+    <Content Include="Areas\bin\Microsoft.AI.DependencyCollector.dll" />
+    <Content Include="Areas\bin\Microsoft.AI.DependencyCollector.xml" />
+    <Content Include="Areas\bin\Microsoft.AI.PerfCounterCollector.dll" />
+    <Content Include="Areas\bin\Microsoft.AI.ServerTelemetryChannel.dll" />
+    <Content Include="Areas\bin\Microsoft.AI.ServerTelemetryChannel.xml" />
+    <Content Include="Areas\bin\Microsoft.AI.Web.dll" />
+    <Content Include="Areas\bin\Microsoft.AI.Web.xml" />
+    <Content Include="Areas\bin\Microsoft.AI.WindowsServer.dll" />
+    <Content Include="Areas\bin\Microsoft.AI.WindowsServer.xml" />
+    <Content Include="Areas\bin\Microsoft.ApplicationInsights.dll" />
+    <Content Include="Areas\bin\Microsoft.ApplicationInsights.xml" />
+    <Content Include="Areas\bin\Microsoft.AspNet.Identity.Core.dll" />
+    <Content Include="Areas\bin\Microsoft.AspNet.Identity.Core.xml" />
+    <Content Include="Areas\bin\Microsoft.AspNet.Identity.EntityFramework.dll" />
+    <Content Include="Areas\bin\Microsoft.AspNet.Identity.EntityFramework.xml" />
+    <Content Include="Areas\bin\Microsoft.AspNet.Identity.Owin.dll" />
+    <Content Include="Areas\bin\Microsoft.AspNet.Identity.Owin.xml" />
+    <Content Include="Areas\bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll" />
+    <Content Include="Areas\bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml" />
+    <Content Include="Areas\bin\Microsoft.Owin.dll" />
+    <Content Include="Areas\bin\Microsoft.Owin.Host.SystemWeb.dll" />
+    <Content Include="Areas\bin\Microsoft.Owin.Host.SystemWeb.xml" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.Cookies.dll" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.Cookies.xml" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.dll" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.Facebook.dll" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.Facebook.xml" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.Google.dll" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.Google.xml" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.MicrosoftAccount.dll" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.MicrosoftAccount.xml" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.OAuth.dll" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.OAuth.xml" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.Twitter.dll" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.Twitter.xml" />
+    <Content Include="Areas\bin\Microsoft.Owin.Security.xml" />
+    <Content Include="Areas\bin\Microsoft.Owin.xml" />
+    <Content Include="Areas\bin\Microsoft.Web.Infrastructure.dll" />
+    <Content Include="Areas\bin\Newtonsoft.Json.dll" />
+    <Content Include="Areas\bin\Newtonsoft.Json.xml" />
+    <Content Include="Areas\bin\Owin.dll" />
+    <Content Include="Areas\bin\roslyn\csc.exe" />
+    <Content Include="Areas\bin\roslyn\Microsoft.Build.Tasks.CodeAnalysis.dll" />
+    <Content Include="Areas\bin\roslyn\Microsoft.CodeAnalysis.CSharp.dll" />
+    <Content Include="Areas\bin\roslyn\Microsoft.CodeAnalysis.dll" />
+    <Content Include="Areas\bin\roslyn\Microsoft.CodeAnalysis.VisualBasic.dll" />
+    <Content Include="Areas\bin\roslyn\System.Collections.Immutable.dll" />
+    <Content Include="Areas\bin\roslyn\System.Reflection.Metadata.dll" />
+    <Content Include="Areas\bin\roslyn\vbc.exe" />
+    <Content Include="Areas\bin\roslyn\VBCSCompiler.exe" />
+    <Content Include="Areas\bin\System.Web.Helpers.dll" />
+    <Content Include="Areas\bin\System.Web.Helpers.xml" />
+    <Content Include="Areas\bin\System.Web.Mvc.dll" />
+    <Content Include="Areas\bin\System.Web.Mvc.xml" />
+    <Content Include="Areas\bin\System.Web.Optimization.dll" />
+    <Content Include="Areas\bin\System.Web.Optimization.xml" />
+    <Content Include="Areas\bin\System.Web.Razor.dll" />
+    <Content Include="Areas\bin\System.Web.Razor.xml" />
+    <Content Include="Areas\bin\System.Web.WebPages.Deployment.dll" />
+    <Content Include="Areas\bin\System.Web.WebPages.Deployment.xml" />
+    <Content Include="Areas\bin\System.Web.WebPages.dll" />
+    <Content Include="Areas\bin\System.Web.WebPages.Razor.dll" />
+    <Content Include="Areas\bin\System.Web.WebPages.Razor.xml" />
+    <Content Include="Areas\bin\System.Web.WebPages.xml" />
+    <Content Include="Areas\bin\WebGrease.dll" />
     <Content Include="Content\AdminLTE.min.css" />
     <Content Include="Content\animate.css" />
     <Content Include="Content\assets\css\countdown.css" />
@@ -788,23 +862,6 @@
     <Content Include="Content\style.css" />
     <Content Include="Content\themify-icons.css" />
     <Content Include="Content\_all-skins.min.css" />
-    <Content Include="css\animate.css" />
-    <Content Include="css\bootstrap-datepicker.css" />
-    <Content Include="css\bootstrap.min.css" />
-    <Content Include="css\bootstrap3-wysihtml5.min.css" />
-    <Content Include="css\core-style.css" />
-    <Content Include="css\daterangepicker.css" />
-    <Content Include="css\font-awesome.css" />
-    <Content Include="css\font-awesome.min.css" />
-    <Content Include="css\ionicons.min.css" />
-    <Content Include="css\magnific-popup.css" />
-    <Content Include="css\medilife-icons.css" />
-    <Content Include="css\morris.css" />
-    <Content Include="css\nice-select.css" />
-    <Content Include="css\owl.carousel.css" />
-    <Content Include="css\Site.css" />
-    <Content Include="css\style.css" />
-    <Content Include="css\themify-icons.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -980,6 +1037,11 @@
     <Content Include="Content\assets\lib\validVal\validVal.jquery.json" />
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\ionicons.woff" />
+    <Content Include="Areas\bin\ApplicationInsights.config" />
+    <Content Include="Areas\bin\Medicare.dll.config" />
+    <Content Include="Areas\bin\roslyn\Microsoft.CSharp.Core.targets" />
+    <Content Include="Areas\bin\roslyn\Microsoft.VisualBasic.Core.targets" />
+    <Content Include="Areas\bin\roslyn\VBCSCompiler.exe.config" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <PropertyGroup>
